[project]
name = "smart-ip-info"
version = "0.1.3"
description = "A simple tool to get information about IP addresses."
authors = [
    {name = "A.A. Suvorov", email = "smartlegiondev@email.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = ["ip", "geo", "cli", "network"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/smartlegionlab/smart-ip-info"
Documentation = "https://github.com/smartlegionlab/smart-ip-info#readme"

[project.scripts]
smart-ip-info = "smart_ip_info.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"